# QtFileTransferManager

./: .gitignore  CMakeLists.txt  PLAN_项目架构.md  ftp_servers.ini  machine_servers.ini
.github/workflows/: build.yml
resources/: resources.qrc
resources/styles/: main.qss
resources/web/: index.html
resources/web/assets/: index.css
resources/web/js/: index.js
src/: main.cpp
src/core/: FileTransfer.cpp  FileTransfer.h  FtpClient.cpp  FtpClient.h  LocalFileOps.cpp  LocalFileOps.h  MachineClient.cpp  MachineClient.h
src/ui/: FilePanel.cpp  FilePanel.h  MachineConfigDialog.cpp  MachineConfigDialog.h  MainWindow.cpp  MainWindow.h  ProgressBar.cpp  ProgressBar.h  StyleManager.cpp  StyleManager.h
src/utils/: FileInfo.h
src/web/: Bridge.cpp  Bridge.h  FtpWorker.cpp  FtpWorker.h  WebWindow.cpp  WebWindow.h
web/: index.html  package-lock.json  package.json  ui-design-fileTransfer.pen  vite.config.ts
web/src/: App.vue  bridge.ts  main.ts
web/src/assets/styles/: main.css
web/src/components/: FilePanel.vue  MachineServerConfig.vue  ProgressBar.vue
web/src/components/base/: GlassButton.vue  GlassContextMenu.vue  GlassDropdown.vue  GlassInput.vue  GlassModal.vue  GlassPanel.vue  GlassToast.vue  GlassToastContainer.vue  index.ts
web/src/components/file/: FileListItem.vue  FolderListItem.vue  index.ts
web/src/components/layout/: Header.vue
web/src/composables/: useToast.ts
web/src/types/: index.ts  toast.ts
